Changing Decision Tree after balancing data using SMOTE

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -25,7 +25,7 @@
         "0IMzpMiHeFY9"
       ],
       "mount_file_id": "1AmsA3aq-bgbQV6PWwPxIlDTgXLq-oeb6",
-      "authorship_tag": "ABX9TyN1OIko8Bj3oKQfjykm9NS5",
+      "authorship_tag": "ABX9TyO2nMQK2ZpP5s+MGUf1LoWv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1093,36 +1093,38 @@
       "cell_type": "code",
       "source": [
         "# Decision Tree baseline\n",
+        "\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report, roc_auc_score\n",
+        "from sklearn.metrics import (\n",
+        "    accuracy_score, precision_score, recall_score, f1_score,\n",
+        "    classification_report, roc_auc_score\n",
+        ")\n",
         "\n",
-        "# Create pipeline: reuse preprocessor you fitted earlier\n",
-        "dt_pipeline = Pipeline([\n",
-        "    ('preproc', preprocessor),\n",
-        "    ('clf', DecisionTreeClassifier(random_state=42))\n",
-        "])\n",
+        "print(\"Training Decision Tree on SMOTE-resampled data...\")\n",
         "\n",
-        "# Fit baseline\n",
-        "dt_pipeline.fit(X_train, y_train)\n",
+        "# Train directly on resampled, preprocessed arrays\n",
+        "dt_clf = DecisionTreeClassifier(random_state=42)\n",
+        "dt_clf.fit(X_train_res, y_train_res)\n",
         "\n",
-        "# Predict on test set\n",
-        "y_pred_dt = dt_pipeline.predict(X_test)\n",
-        "# Probabilities for AUC\n",
-        "y_proba_dt = dt_pipeline.predict_proba(X_test)[:,1] if hasattr(dt_pipeline.named_steps['clf'], \"predict_proba\") else None\n",
+        "# Predict on test set (use preprocessed X_test_proc)\n",
+        "y_pred_dt = dt_clf.predict(X_test_proc)\n",
+        "y_proba_dt = dt_clf.predict_proba(X_test_proc)[:,1]\n",
         "\n",
         "# Compute metrics\n",
-        "dt_acc = accuracy_score(y_test, y_pred_dt)\n",
+        "dt_acc  = accuracy_score(y_test, y_pred_dt)\n",
         "dt_prec = precision_score(y_test, y_pred_dt, zero_division=0)\n",
-        "dt_rec = recall_score(y_test, y_pred_dt, zero_division=0)\n",
-        "dt_f1 = f1_score(y_test, y_pred_dt, zero_division=0)\n",
-        "dt_auc = roc_auc_score(y_test, y_proba_dt) if y_proba_dt is not None else None\n",
+        "dt_rec  = recall_score(y_test, y_pred_dt, zero_division=0)\n",
+        "dt_f1   = f1_score(y_test, y_pred_dt, zero_division=0)\n",
+        "dt_auc  = roc_auc_score(y_test, y_proba_dt)\n",
         "\n",
-        "print(\"Decision Tree - Baseline\")\n",
-        "print(f\"Accuracy: {dt_acc:.4f}, Precision: {dt_prec:.4f}, Recall: {dt_rec:.4f}, F1: {dt_f1:.4f}\")\n",
-        "if dt_auc is not None:\n",
-        "    print(f\"AUC: {dt_auc:.4f}\")\n",
+        "print(\"\\nDecision Tree - Baseline (SMOTE)\")\n",
+        "print(f\"Accuracy:  {dt_acc:.4f}\")\n",
+        "print(f\"Precision: {dt_prec:.4f}\")\n",
+        "print(f\"Recall:    {dt_rec:.4f}\")\n",
+        "print(f\"F1 Score:  {dt_f1:.4f}\")\n",
+        "print(f\"AUC:       {dt_auc:.4f}\")\n",
         "\n",
-        "print(\"\\nClassification report:\")\n",
+        "print(\"\\nClassification Report:\")\n",
         "print(classification_report(y_test, y_pred_dt, zero_division=0))"
       ],
       "metadata": {
@@ -1171,22 +1173,33 @@
       "source": [
         "# GridSearchCV for Decision Tree\n",
         "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
         "\n",
         "param_grid = {\n",
-        "    'clf__criterion': ['gini', 'entropy'],\n",
-        "    'clf__max_depth': [4, 8, 12, None],\n",
-        "    'clf__min_samples_leaf': [1, 3, 6]\n",
+        "    'criterion': ['gini', 'entropy'],\n",
+        "    'max_depth': [4, 8, 12, None],\n",
+        "    'min_samples_leaf': [1, 3, 6]\n",
         "}\n",
         "\n",
-        "grid_dt = GridSearchCV(dt_pipeline, param_grid, cv=4, scoring='f1', n_jobs=-1, verbose=1)\n",
-        "grid_dt.fit(X_train, y_train)\n",
+        "# Used a plain classifier here because we already preprocessed and SMOTE'd the data\n",
+        "grid_dt = GridSearchCV(\n",
+        "    DecisionTreeClassifier(random_state=42),\n",
+        "    param_grid,\n",
+        "    cv=4,\n",
+        "    scoring='f1',\n",
+        "    n_jobs=-1,\n",
+        "    verbose=1\n",
+        ")\n",
+        "\n",
+        "# Fit on SMOTE-resampled numeric arrays\n",
+        "grid_dt.fit(X_train_res, y_train_res)\n",
         "\n",
         "print(\"Best params:\", grid_dt.best_params_)\n",
         "best_dt = grid_dt.best_estimator_\n",
         "\n",
-        "# Evaluate tuned model\n",
-        "y_pred_best_dt = best_dt.predict(X_test)\n",
-        "y_proba_best_dt = best_dt.predict_proba(X_test)[:,1] if hasattr(best_dt.named_steps['clf'], \"predict_proba\") else None\n",
+        "# Evaluate tuned model on the test set\n",
+        "y_pred_best_dt = best_dt.predict(X_test_proc)\n",
+        "y_proba_best_dt = best_dt.predict_proba(X_test_proc)[:,1] if hasattr(best_dt, \"predict_proba\") else None\n",
         "\n",
         "print(\"Tuned Decision Tree metrics:\")\n",
         "print(\"F1:\", round(f1_score(y_test, y_pred_best_dt),4),\n",
@@ -1195,30 +1208,33 @@
         "if y_proba_best_dt is not None:\n",
         "    print(\"AUC:\", round(roc_auc_score(y_test, y_proba_best_dt),4))\n",
         "\n",
-        "\n",
         "from sklearn import tree\n",
         "from sklearn.tree import export_text\n",
         "\n",
-        "# Extract classifier from pipeline\n",
-        "clf = best_dt.named_steps['clf']\n",
+        "from sklearn import tree\n",
         "\n",
-        "# Build feature name list: numeric + one-hot names\n",
+        "# If best_dt is a pipeline (older code), extract classifier; otherwise use directly\n",
+        "if hasattr(best_dt, \"named_steps\"):\n",
+        "    clf = best_dt.named_steps.get('clf', None)\n",
+        "else:\n",
+        "    clf = best_dt\n",
+        "\n",
+        "# Build feature name list from preprocessor (numeric + one-hot)\n",
         "num_features = [c for c in numeric_cols if c in X_train.columns]\n",
         "\n",
         "cat_feature_names = []\n",
         "try:\n",
         "    ohe = preprocessor.named_transformers_['cat'].named_steps['onehot']\n",
         "    cat_feature_names = list(ohe.get_feature_names_out())\n",
-        "except:\n",
-        "    pass\n",
+        "except Exception:\n",
+        "    cat_feature_names = []\n",
         "\n",
         "feature_names = num_features + cat_feature_names\n",
         "\n",
         "# Fallback if mismatch occurs\n",
-        "if len(feature_names) != clf.n_features_in_:\n",
-        "    feature_names = [f\"feature_{i}\" for i in range(clf.n_features_in_)]\n",
+        "if clf is None or len(feature_names) != clf.n_features_in_:\n",
+        "    feature_names = [f\"f_{i}\" for i in range(clf.n_features_in_)]\n",
         "\n",
-        "# ---- 1. PLOT TOP 3 LEVELS OF TREE (readable version) ----\n",
         "plt.figure(figsize=(18,8))\n",
         "tree.plot_tree(\n",
         "    clf,\n",
@@ -1282,6 +1298,24 @@
         "# Preprocess and get numpy arrays for NN\n",
         "X_train_proc = preprocessor.transform(X_train)\n",
         "X_test_proc = preprocessor.transform(X_test)\n",
+        "\n",
+        "\n",
+        "# BALANCE TRAINING DATA USING SMOTE\n",
+        "\n",
+        "from imblearn.over_sampling import SMOTE\n",
+        "\n",
+        "# Use SMOTE on the preprocessed training arrays only (no test leakage)\n",
+        "sm = SMOTE(random_state=42)\n",
+        "\n",
+        "# If y_train is a pandas Series, convert to numpy\n",
+        "y_train_arr = y_train.values if hasattr(y_train, \"values\") else y_train\n",
+        "\n",
+        "# Apply SMOTE to the numeric arrays produced by the preprocessor\n",
+        "X_train_res, y_train_res = sm.fit_resample(X_train_proc, y_train_arr)\n",
+        "\n",
+        "print(\"After SMOTE -> X_train:\", X_train_res.shape, \"y_train distribution:\", np.bincount(y_train_res.astype(int)))\n",
+        "# Now X_train_res and y_train_res are the balanced training set to use for fitting models\n",
+        "\n",
         "\n",
         "print(\"Preprocessed shapes -> X_train:\", X_train_proc.shape, \"X_test:\", X_test_proc.shape)"
       ],
