Final Final commit

--- a/CM2604_Telco_Churn_Project.ipynb
+++ b/CM2604_Telco_Churn_Project.ipynb
@@ -14,10 +14,11 @@
         "JFcMTXtxax0V",
         "ruMvo2WBbhAo",
         "0R2xsTHfzNsN",
-        "ayyq1MbR0VJn"
+        "ayyq1MbR0VJn",
+        "-Achk6uOT3XZ"
       ],
       "mount_file_id": "1AmsA3aq-bgbQV6PWwPxIlDTgXLq-oeb6",
-      "authorship_tag": "ABX9TyPW64rovK14ZzvkhqfhoYhl",
+      "authorship_tag": "ABX9TyPZ1D6qy0OYH4NylyhBqtP+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1240,7 +1241,6 @@
         "from sklearn import tree\n",
         "from sklearn.tree import export_text\n",
         "\n",
-        "from sklearn import tree\n",
         "\n",
         "# If best_dt is a pipeline, extract classifier; otherwise use directly\n",
         "if hasattr(best_dt, \"named_steps\"):\n",
@@ -1282,7 +1282,7 @@
         "id": "jhCXoqcWSAI2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 393
+          "height": 772
         },
         "outputId": "ca5a476b-0caf-48f5-d52c-71df99c1e62c"
       },
@@ -1487,7 +1487,7 @@
         "id": "mR2O55I5bm_x",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 799
+          "height": 817
         },
         "outputId": "19421d39-3b1f-40b9-f9eb-bca7ef2b0183"
       },
@@ -2097,7 +2097,7 @@
       "cell_type": "markdown",
       "source": [
         "### Save final models\n",
-        "Save the tuned Decision Tree pipeline and Keras model for submission or future use."
+        "Save the tuned Decision Tree pipeline and Keras model."
       ],
       "metadata": {
         "id": "0IMzpMiHeFY9"
